# easy_kill

./: .gitignore  README.md  pyproject.toml
easy_kill/: __init__.py  __main__.py
tests/: helpers.py  test_easy-kill.py
